AP-92-bogdang - refactor method noComments and BUILD SUCCESS